frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-ingress
spec:
  rules:
  - host: lugx-gaming.com
    http:
      paths:
      - path: /api/analytics/events
        pathType: Prefix
        backend:
          service:
            name: analytics-service
            port:
              number: 8080

      - path: /api/games
        pathType: Prefix
        backend:
          service:
            name: game-service
            port:
              number: 5000

      - path: /api/orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 6000

      - path: /api/cart
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 6000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
